tests/rosetta/out/Kotlin/100-doors.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:33:01Z
fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)

fun toBool(v: Any?): Boolean = when (v) {
    is Boolean -> v
    is Int -> v != 0
    is Double -> v != 0.0
    is String -> v.isNotEmpty()
    null -> false
    else -> true
}
// Code generated from 100-doors.mochi

var doors = mutableListOf()

fun main() {
    for (i in 0 until 100) {
        doors = doors + false
    }
    for (pass in 1 until 101) {
        var idx = pass - 1
        while (idx < 100) {
            doors[idx] = !doors[idx]
            idx = idx + pass
        }
    }
    for (row in 0 until 10) {
        var line = ""
        for (col in 0 until 10) {
            val idx = row * 10 + col
            if (toBool(doors[idx])) {
                line = line + "1"
            }
            else {
                line = line + "0"
            }
            if (col < 9) {
                line = line + " "
            }
        }
        println(line)
    }
}
